---------------------------------------------
     Pidgin Paranoia Plug-in Change Log
---------------------------------------------

0.1.0
Simon Wenner:
 * Paranoia: Basic plugin structure, libotp API
 * A build system 'from hell'! (but it seems to work)
 * Session and key management documentation
 * Paranoia: CLI functionality
 * Paranoia: Key list search functions
 * Paranoia: Key list is generated from files
 * Paranoia: Basic session initialisation

Christan Wäckerlin:
 * One-time pad documentation
 * Libotp: xor function
 * Libotp: base64 encode and decode using gnomelib (maybe broken)
 * Libotp: encrypt and decrypt
 * Added support for the ./configure --enable-realotp swich that enables otp support for testing.
 * Libotp: struct *mypad is generated from keyfile
 * Keyfile templates added
 

Known Bugs:
 * /otp info is only working after one message was received
 * leaving and returning to a session works under certain circumstances